Loading in login

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4711,3 +4711,12 @@ figure.user-card ul.contacts {
   border: 1px solid rgba(0,0,0,.125);
   border-radius: .25rem;
 }
+
+.iwSUvz {
+  width: 300px !important;
+}
+
+.iaVjHB {
+  margin-top: 10px;
+  font-size: 18px !important;
+}
