--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4717,6 +4717,6 @@ figure.user-card ul.contacts {
 }
 
 .iaVjHB {
-  margin-top: 10px;
+  margin-top: 10px !important;
   font-size: 18px !important;
 }
