--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4720,3 +4720,7 @@ figure.user-card ul.contacts {
   margin-top: 10px !important;
   font-size: 18px !important;
 }
+
+.nk-navigation a[data-ma-block="#l-register"]:hover {
+  width: 105px !important;
+}
